--- a/Underwerld.UI/content/style.css
+++ b/Underwerld.UI/content/style.css
@@ -1,1 +1,15 @@
-﻿
+﻿* {
+	margin:0;
+	padding:0;
+}
+
+html, body {
+	width:100%;
+	height:100%;
+}
+
+#game-container {
+	width:100%;
+	height:100%;
+	background-color:cadetblue;
+}
