--- a/Underwerld.UI/content/style.css
+++ b/Underwerld.UI/content/style.css
@@ -4,12 +4,32 @@
 }
 
 html, body {
-	width:100%;
-	height:100%;
+	width: 100%;
+	height: 100%;
+	background-color: cadetblue;
 }
 
 #game-container {
 	width:100%;
 	height:100%;
-	background-color:cadetblue;
+	position:absolute;
+}
+
+#console-out, #console-in {
+	width: 50%;
+	height: 50%;
+	margin: auto;
+	display: block;
+}
+
+#console-in {
+	height: 10%;
+	font-size:2em;
+}
+
+#console-out {
+	margin-top:10em;
+	background-color:#000;
+	color:#4cff00;
+	border:1px solid #808080;
 }
